<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/mainTextTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name_project"
        android:textSize="32sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.1"/>

    <LinearLayout
        android:id="@+id/linearLayoutInputOneOperand"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="18pt"
        android:layout_marginRight="100pt"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mainTextTV"
        app:layout_constraintVertical_bias="0.1">

        <EditText
            android:id="@+id/hourOneOperandET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="3pt"
            android:layout_marginRight="3pt"
            android:layout_weight="1"
            android:hint="@string/h"/>

        <EditText
            android:id="@+id/minOneOperandET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="3pt"
            android:layout_marginRight="3pt"
            android:layout_weight="1"
            android:hint="@string/m"/>

        <EditText
            android:id="@+id/secOneOperandET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="3pt"
            android:layout_marginRight="3pt"
            android:layout_weight="1"
            android:hint="@string/s"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayoutInputTwoOperand"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="18pt"
        android:layout_marginLeft="100pt"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mainTextTV"
        app:layout_constraintVertical_bias="0.1"
        android:orientation="horizontal">
        <EditText
            android:id="@+id/hourTwoOperandET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="3pt"
            android:layout_marginRight="3pt"
            android:layout_weight="1"
            android:hint="@string/h"/>
        <EditText
            android:id="@+id/minTwoOperandET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="3pt"
            android:layout_marginRight="3pt"
            android:layout_weight="1"
            android:hint="@string/m"/>
        <EditText
            android:id="@+id/secTwoOperandET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="3pt"
            android:layout_marginRight="3pt"
            android:layout_weight="1"
            android:hint="@string/s"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayoutChoiceOperand"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8pt"
        android:layout_marginRight="8pt"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayoutInputOneOperand"
        app:layout_constraintVertical_bias="0.1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonSumBTN"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginRight="8pt"
            android:layout_marginLeft="8pt"
            android:text="@string/name_plus"
            android:textSize="22sp"/>
        <Button
            android:id="@+id/buttonDifBTN"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginLeft="8pt"
            android:layout_marginRight="8pt"
            android:text="@string/name_minus"
            android:textSize="22sp"/>
    </LinearLayout>

    <TextView
        android:id="@+id/resultTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/name_result"
        android:textSize="36sp"
        app:layout_constraintVertical_bias="0.1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayoutChoiceOperand" />

    <LinearLayout
        android:id="@+id/linearLayoutResetExit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8pt"
        android:layout_marginRight="8pt"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/resultTV"
        app:layout_constraintVertical_bias="0.1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonResetBTN"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/name_reset"
            android:textSize="22sp"/>
        <Button
            android:id="@+id/buttonExitBTN"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/name_exit"
            android:textSize="22sp"/>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>